--- a/Zadania/Views/Shared/_Layout.cshtml
+++ b/Zadania/Views/Shared/_Layout.cshtml
@@ -25,6 +25,21 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Klasa" asp-action="Index">Klasa</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Nauczyciel" asp-action="Index">Nauczyciel</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Uczen" asp-action="Index">Uczen</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="UczenZadanie" asp-action="Index">UczenZadanie</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Zadanie" asp-action="Index">Zadanie</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
